refactor(import): adopt API-level Java 25 idioms
Behavior-preserving: List.getLast() in YahooFinanceClient.fetchCurrentPrice
replacing points.get(points.size() - 1), where points.isEmpty() is already
checked immediately above so non-emptiness is guaranteed. No new syntax
(Checkstyle/PMD parser guardrail). Existing tests and all five gates green.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013zqLcvSyE7cr1g5Z5m8zio